Added app manifests to the server manager and SRM tools, ensuring that they are run with administrator priviledges only (leading to less odd errors for users with UAC). Also removed old source control bindings.

--- a/SharpShell/SharpShellNativeBridge/SharpShellNativeBridge.vcxproj
+++ b/SharpShell/SharpShellNativeBridge/SharpShellNativeBridge.vcxproj
@@ -22,10 +22,14 @@
     <ProjectGuid>{56906C34-D601-45B3-8409-048DA1C9F35F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>SharpShellNativeBridge</RootNamespace>
-    <SccProjectName>SAK</SccProjectName>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
