--- a/SharpShell/Samples/ContextMenu/AdvancedContextMenuExtension/AdvancedContextMenuExtension.csproj
+++ b/SharpShell/Samples/ContextMenu/AdvancedContextMenuExtension/AdvancedContextMenuExtension.csproj
@@ -11,10 +11,14 @@
     <AssemblyName>AdvancedContextMenuExtension</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
