Fixed a debug mode only issue with a missed function name during refactoring, also SharpShellServer.Log and LogError now log to the event log even in Debug Mode.

--- a/SharpShell/Tools/ServerRegistrationManager/ServerRegistrationManager.csproj
+++ b/SharpShell/Tools/ServerRegistrationManager/ServerRegistrationManager.csproj
@@ -73,7 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="app.manifest" />
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Key.snk" />
   </ItemGroup>
   <ItemGroup>
