--- a/SharpShell/packages/repositories.config
+++ b/SharpShell/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\SharpShell.Tests\packages.config" />
   <repository path="..\Tools\ServerInspector\packages.config" />
 </repositories>
