--- a/SharpShell/Tools/ServerManager/ServerManager.csproj
+++ b/SharpShell/Tools/ServerManager/ServerManager.csproj
@@ -164,6 +164,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellDebugger\ShellDebuggerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShellDebugger\ShellDebuggerForm.Designer.cs">
+      <DependentUpon>ShellDebuggerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestShell\ShellThumbnailHost.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -203,6 +209,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ServerManagerForm.resx">
       <DependentUpon>ServerManagerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShellDebugger\ShellDebuggerForm.resx">
+      <DependentUpon>ShellDebuggerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TestShell\ShellThumbnailHost.resx">
       <DependentUpon>ShellThumbnailHost.cs</DependentUpon>
