Added some tests to SharpShell that drive some of the Shell32 and IShellFolder functionality - killed a couple of nasty bugs in the marshalling along the way. The Shell Debugger is still failing in the same place as before - however I've noticed that the pointers it's creating for the IShellView seem to be very high, they might be invalid.

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Interop\SHCONTF.cs" />
     <Compile Include="Interop\SHELLEXECUTEINFO.cs" />
     <Compile Include="Interop\SHGDNF.cs" />
+    <Compile Include="Interop\Shlwapi.cs" />
     <Compile Include="Interop\STRRET.cs" />
     <Compile Include="Interop\SVUIA_STATUS.cs" />
     <Compile Include="Interop\TBBUTTON.cs" />
