A few steps further forwards with the shell namespace extensions, they're being instantiated at least by the shell now, but marshalling errors are breaking things early on. More debugging to do.

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -150,6 +150,7 @@
     <Compile Include="SharpNamespaceExtension\IShellNamespaceItem.cs" />
     <Compile Include="SharpNamespaceExtension\NamespaceExtensionAvailability.cs" />
     <Compile Include="SharpNamespaceExtension\NamespaceExtensionJunctionPointAttribute.cs" />
+    <Compile Include="SharpNamespaceExtension\NamespaceExtensionRegistrationSettings.cs" />
     <Compile Include="SharpNamespaceExtension\ShellNamespaceFolder.cs" />
     <Compile Include="SharpNamespaceExtension\RegistryKeyAttribute.cs" />
     <Compile Include="SharpNamespaceExtension\SharpNamespaceExtension.cs" />
