--- a/SharpShell/Samples/NamespaceExtension/TrivialNamespaceExtension/TrivialNamespaceExtension.csproj
+++ b/SharpShell/Samples/NamespaceExtension/TrivialNamespaceExtension/TrivialNamespaceExtension.csproj
@@ -43,11 +43,11 @@
   <ItemGroup>
     <Compile Include="TrivialNamespaceExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserControl1.cs">
+    <Compile Include="ExtensionViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UserControl1.Designer.cs">
-      <DependentUpon>UserControl1.cs</DependentUpon>
+    <Compile Include="ExtensionViewControl.Designer.cs">
+      <DependentUpon>ExtensionViewControl.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -57,8 +57,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="UserControl1.resx">
-      <DependentUpon>UserControl1.cs</DependentUpon>
+    <EmbeddedResource Include="ExtensionViewControl.resx">
+      <DependentUpon>ExtensionViewControl.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
