More work, shell details still not working, think it might be pidls etc

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -159,15 +159,20 @@
     <Compile Include="SharpIconHandler\SharpIconHandler.cs" />
     <Compile Include="SharpIconOverlayHandler\SharpIconOverlayHandler.cs" />
     <Compile Include="SharpNamespaceExtension\AttributeFlags.cs" />
+    <Compile Include="SharpNamespaceExtension\CustomNamespaceFolderView.cs" />
+    <Compile Include="SharpNamespaceExtension\DefaultNamespaceFolderView.cs" />
     <Compile Include="SharpNamespaceExtension\DisplayNameContext.cs" />
+    <Compile Include="SharpNamespaceExtension\IShellNamespaceFolder.cs" />
     <Compile Include="SharpNamespaceExtension\IShellNamespaceItem.cs" />
     <Compile Include="SharpNamespaceExtension\NamespaceExtensionAvailability.cs" />
     <Compile Include="SharpNamespaceExtension\NamespaceExtensionJunctionPointAttribute.cs" />
     <Compile Include="SharpNamespaceExtension\NamespaceExtensionRegistrationSettings.cs" />
+    <Compile Include="SharpNamespaceExtension\ShellDetailColumn.cs" />
     <Compile Include="SharpNamespaceExtension\ShellFolderImpl.cs" />
     <Compile Include="SharpNamespaceExtension\ShellFolderProxy.cs" />
+    <Compile Include="SharpNamespaceExtension\ShellNamespaceEnumerationFlags.cs" />
+    <Compile Include="SharpNamespaceExtension\ShellNamespaceFolderView.cs" />
     <Compile Include="SharpNamespaceExtension\ShellViewHost.cs" />
-    <Compile Include="SharpNamespaceExtension\ShellNamespaceFolder.cs" />
     <Compile Include="SharpNamespaceExtension\RegistryKeyAttribute.cs" />
     <Compile Include="SharpNamespaceExtension\SharpNamespaceExtension.cs" />
     <Compile Include="SharpNamespaceExtension\ShellNamespaceFolderIdListEnumerator.cs" />
