Some small progress, still a way to go...

--- a/SharpShell/Tools/ServerManager/ServerManager.csproj
+++ b/SharpShell/Tools/ServerManager/ServerManager.csproj
@@ -170,6 +170,7 @@
     <Compile Include="ShellDebugger\ShellDebuggerForm.Designer.cs">
       <DependentUpon>ShellDebuggerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ShellDebugger\ShellTreeEventArgs.cs" />
     <Compile Include="ShellDebugger\ShellTreeView.cs">
       <SubType>Component</SubType>
     </Compile>
