--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -82,6 +82,10 @@
     <Compile Include="InitializeWithStreamServer.cs" />
     <Compile Include="Interop\BITMAPV5HEADER.cs" />
     <Compile Include="Interop\COLORREF.cs" />
+    <Compile Include="Interop\GILInFlags.cs" />
+    <Compile Include="Interop\IDefaultExtractIconInit.cs" />
+    <Compile Include="Interop\IExtractIconA.cs" />
+    <Compile Include="Interop\IExtractIconW.cs" />
     <Compile Include="Interop\LVCFMT.cs" />
     <Compile Include="Interop\PROPERTYKEY.cs" />
     <Compile Include="Interop\CSFV.cs" />
@@ -216,7 +220,7 @@
     <Compile Include="Interop\DLGTEMPLATE.cs" />
     <Compile Include="Interop\GCS.cs" />
     <Compile Include="Interop\IContextMenu.cs" />
-    <Compile Include="Interop\IExtractIcon.cs" />
+    <Compile Include="Interop\GILOutFlags.cs" />
     <Compile Include="Interop\IQueryInfo.cs" />
     <Compile Include="Interop\IShellExtInit.cs" />
     <Compile Include="Interop\IShellPropSheetExt.cs" />
