--- a/SharpShell/Samples/NamespaceExtension/RegistryNamespaceExtension/RegistryNamespaceExtension.csproj
+++ b/SharpShell/Samples/NamespaceExtension/RegistryNamespaceExtension/RegistryNamespaceExtension.csproj
@@ -42,6 +42,11 @@
   <ItemGroup>
     <Compile Include="KeyAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="RegistryKeyItem.cs" />
     <Compile Include="RegistryNamespaceExtenson.cs" />
   </ItemGroup>
@@ -50,6 +55,15 @@
       <Project>{B5D5F670-BFBA-4D09-91C6-74BB12B7EDD4}</Project>
       <Name>SharpShell</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RegistryKey.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
