Made several leaps forward with context menus, they now work (typically via SharpContextMenu) and can be wired in, just need to decide on the API (am thinking abstract or protected methods in the core extension itself).

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -175,6 +175,7 @@
     <Compile Include="SharpNamespaceExtension\DefaultNamespaceFolderView.cs" />
     <Compile Include="SharpNamespaceExtension\DisplayNameContext.cs" />
     <Compile Include="SharpNamespaceExtension\IShellNamespaceFolder.cs" />
+    <Compile Include="SharpNamespaceExtension\IShellNamespaceFolderContextMenuProvider.cs" />
     <Compile Include="SharpNamespaceExtension\IShellNamespaceItem.cs" />
     <Compile Include="SharpNamespaceExtension\NamespaceExtensionAvailability.cs" />
     <Compile Include="SharpNamespaceExtension\NamespaceExtensionJunctionPointAttribute.cs" />
