more work on NSE context menus

--- a/SharpShell/Samples/NamespaceExtension/GitHubNamespaceExtension/GitHubNamespaceExtension.csproj
+++ b/SharpShell/Samples/NamespaceExtension/GitHubNamespaceExtension/GitHubNamespaceExtension.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GitHubBranch.cs" />
+    <Compile Include="GithubContextMenu.cs" />
     <Compile Include="GitHubNamespaceExtension.cs" />
     <Compile Include="GitHubRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
