Got the beginnings of the context menu for the tree view working and imported a useful project from MSDN magazine.

--- a/SharpShell/Tools/ServerManager/ServerManager.csproj
+++ b/SharpShell/Tools/ServerManager/ServerManager.csproj
@@ -217,6 +217,9 @@
     <EmbeddedResource Include="ShellDebugger\ShellDebuggerForm.resx">
       <DependentUpon>ShellDebuggerForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ShellDebugger\ShellTreeView.resx">
+      <DependentUpon>ShellTreeView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TestShell\ShellThumbnailHost.resx">
       <DependentUpon>ShellThumbnailHost.cs</DependentUpon>
     </EmbeddedResource>
