--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Interop\IDefaultExtractIconInit.cs" />
     <Compile Include="Interop\IExtractIconA.cs" />
     <Compile Include="Interop\IExtractIconW.cs" />
+    <Compile Include="Interop\IPersistIDList.cs" />
     <Compile Include="Interop\LVCFMT.cs" />
     <Compile Include="Interop\PROPERTYKEY.cs" />
     <Compile Include="Interop\CSFV.cs" />
