--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Interop\IDefaultExtractIconInit.cs" />
     <Compile Include="Interop\IExtractIconA.cs" />
     <Compile Include="Interop\IExtractIconW.cs" />
+    <Compile Include="Interop\IMAGEINFO.cs" />
+    <Compile Include="Interop\IMAGELISTDRAWPARAMS.cs" />
     <Compile Include="Interop\IPersistIDList.cs" />
     <Compile Include="Interop\LVCFMT.cs" />
     <Compile Include="Interop\PROPERTYKEY.cs" />
@@ -163,6 +165,7 @@
     <Compile Include="Interop\WTS_ALPHATYPE.cs" />
     <Compile Include="Interop\_SVGIO.cs" />
     <Compile Include="Interop\_SVSIF.cs" />
+    <Compile Include="Pidl\IdList.cs" />
     <Compile Include="Pidl\PidlManager.cs" />
     <Compile Include="Pidl\ShellId.cs" />
     <Compile Include="ServerRegistration\ClassRegistration.cs" />
